finish differentiation tag

--- a/LabHTML/2.differentiation tag.html
+++ b/LabHTML/2.differentiation tag.html
@@ -1,24 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2.differentiation tag</title>
 </head>
+
 <body>
-    <h6> 2.differentiation tag </h6>
+    <h1> 2.differentiation tag </h1>
+
+
+
+
+    <!-- <hr>    
+    <form action="">
+        <input type="checkbox">
+        <input type="radio">
+        <input type="radio">
+        <input type="radio">
+        <select>
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="mercedes">Mercedes</option>
+            <option value="audi">Audi</option>
+        </select>
+    </form>
+    <div>hello</div><div>chawintee</div><div>tobtab</div>
+    <span>tobtab</span><span>chawintee</span><span>hello</span> -->
+
+
+
+
+
+
+
     <table>
         <thead>
-
-
-            
+            <td> Tag </td>
+            <td> Same </td>
+            <td> Different </td>
         </thead>
+
+        <tbody>
+            <tr>
+                <td> hr & br </td>
+                <td> for line break </td>
+                <td> hr have a line br don't have line </td>
+            </tr>
+            <tr>
+                <td> ul & ol </td>
+                <td> for list </td>
+                <td> ul use bullets but ol use number </td>
+            </tr>
+            <tr>
+                <td> select & checkbox & radio button </td>
+                <td> for select choice </td>
+                <td> "select" use for have specify choice
+                    "checkbox" for select yes or no can change
+                    "radio button" for select 1 time
+                </td>
+
+            </tr>
+            <tr>
+                <td> div & span </td>
+                <td> element used to color a part of a text </td>
+                <td> "div" a division or a section in an HTML document 
+                     "span" used to group inline-elements in a document 
+                </td>
+
+            </tr>
+            <tr>
+                <td> script & style </td>
+                <td> tag is used to define style for user </td>
+                <td> "script" used to define a client-side script (JavaScript)
+                     "style" used to define style information for an HTML document
+                </td>
+
+            </tr>
+        </tbody>
 
 
 
 
     </table>
-    
+
 </body>
+
 </html>
