input type some finish

--- a/LabHTML/1.attribute.html
+++ b/LabHTML/1.attribute.html
@@ -133,6 +133,8 @@
     <hr>
     <br>
 
+    <a href="./2.differentiation tag.html">2.differentiation tag</a>
+
     <!-- <ol>
         <li>Coffee</li>
         <li>Tea</li>
