Update css example: ; ;

--- a/csstrial/trilalcss.html
+++ b/csstrial/trilalcss.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href=""> -->
 </head>
 <body>
-    <h1> Trial </h1>
+    <h1 style="property: value; property: value;"> Trial </h1>
     <h6> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, sint.    </h6>
 </body>
 </html>
