report can't external link

--- a/csstrial/trilalcss.html
+++ b/csstrial/trilalcss.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../CSS/style.css" type="CSS/text">
     <title> CSS trial </title>
-    <!-- <link rel="stylesheet" href=""> -->
 </head>
+
 <body>
-    <h1 style="property: value; property: value;"> Trial </h1>
-    <h6> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, sint.    </h6>
+    <h1 class="heading" style="property: value; property: value;"> Trial </h1>
+
+    <style>
+        selector {
+            property: value;
+            property: value;
+            property: value;
+        }
+
+    </style>
+
+    <h6> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, sint. </h6>
+
+    <h3 id="idName"> this tag have id that is idName </h3>
+
+    <h3 class="className"> this tag have class that is className</h3>
+
+
+
 </body>
+
 </html>
