CSS trial pseudo element

--- a/csstrial/trilalcss.html
+++ b/csstrial/trilalcss.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../CSS/style.css" type="CSS/text">
+    <link rel="stylesheet" href="../CSS/style.css" type="text/css">
     <title> CSS trial </title>
 </head>
 
@@ -18,7 +18,6 @@
             property: value;
             property: value;
         }
-
     </style>
 
     <h6> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, sint. </h6>
@@ -26,6 +25,48 @@
     <h3 id="idName"> this tag have id that is idName </h3>
 
     <h3 class="className"> this tag have class that is className</h3>
+
+    <h2> Pseudo class </h2>
+
+
+    <form class="formCheckbox" action="Don't response">
+        <input type="checkbox"> one </input>
+        <input type="checkbox"> two </input>
+        <input type="checkbox" checked> three </input>
+    </form>
+    <br>
+    <h2> Combination test </h2>
+
+    <div>
+        <p> paragraph 1 in div </p>
+        <p> paragraph 2 in div </p>
+        <p> paragraph 3 in div </p>
+    </div>
+
+    <h2> Pseudo element </h2>
+    <h3 id="tagH">
+        <div>div 1 item in tag p 
+            <div class="plusCombinators"> div 2 item in tag div in tag p this div have class plusComvinators </div>
+            <div> div 3 item in tag div in tag p </div>
+            <div> div 4 item in tag div in tag p </div>
+            <span>tag p</span>
+            <div> div 5 item in tag div in tag p </div>
+        </div>
+
+        <div>div 2 item in tag p </div>
+        <div>div 3 item in tag p </div>
+        <div>div 4 item in tag p </div>
+        <div>div 5 item in tag p </div>
+        
+        <span> span 1 item in tag p </span>
+        <span> span 2 item in tag p </span>
+        <span> span 3 item in tag p </span>
+
+
+
+    </h3>
+
+
 
 
 
