trial css1 finish

--- a/csstrial/trilalcss.html
+++ b/csstrial/trilalcss.html
@@ -9,6 +9,8 @@
     <title> CSS trial </title>
 </head>
 
+<a href="#"></a>
+
 <body>
     <h1 class="heading" style="property: value; property: value;"> Trial </h1>
 
@@ -61,10 +63,29 @@
         <span> span 1 item in tag p </span>
         <span> span 2 item in tag p </span>
         <span> span 3 item in tag p </span>
-
-
-
     </h3>
+
+    <p>
+        <span> span in tag p</span>
+        <span> span 2 in tag p</span>
+        <span>  
+            <span> span 1 in span </span>
+            <span> span 2 in span </span>
+            <span> span 3 in span </span>
+        </span>
+        <div> div in tag p </div>
+    </p>
+
+    <h2> Attribute selector </h2>
+    <form>
+        <input type="text" title="inputForm"> <br>
+        <input type="color" title="input this-color"> <br>
+        <input type="date" title="input-Form"> <br>
+        <input type="email" title="input_Form"> <br>
+        <input type="file" title="input//Form"> <br>
+        <input type="password" title="input Form"> <br>
+        <input type="seach" title=" this input search "> <br>
+    </form>
 
 
 
