--- a/csstrial/table.html
+++ b/csstrial/table.html
@@ -57,6 +57,11 @@
     <div class="paddingMargin"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio voluptate non voluptates.</div>
     <div> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
 
+<h2>Display</h2>
+<p class="pDisplay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, consectetur.</p>
+<span> span after tag p</span>
+
+
 
 
 
