--- a/csstrial/flex.html
+++ b/csstrial/flex.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/grid.css">
+    <link rel="stylesheet" href="../CSS/flex.css">
 </head>
-
-
 <body>
 
     <div class="container">
+
         <div class="item1"> div 1</div>
         <div class="item2"> div 2</div>
         <div class="item3"> div 3</div>
@@ -22,6 +21,7 @@
         <div class="item8"> div 8</div>
         <div class="item9"> div 9</div>
         <div class="item10"> div 10</div>
+
     </div>
     
 </body>
