--- a/csstrial/position.html
+++ b/csstrial/position.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +11,20 @@
 
 
 <body>
+    <div class="container">
 
-    <div class="flex">
+        <div class="flex">
 
-        <div class="item1"> div in body 1</div>
-        <div class="item2"> div in body 2</div>
-        <div class="item3"> div in body 3</div>
-        <div class="item4"> div in body 4</div>
-        <div class="item5"> div in body 5</div>
-        <div class="item6"> div in body 6</div>
-      
+            <div class="item1"> div in body 1</div>
+            <div class="item2"> div in body 2</div>
+            <div class="item3"> div in body 3</div>
+            <div class="item4"> div in body 4</div>
+            <div class="item5"> div in body 5</div>
+            <div class="item6"> div in body 6</div>
+
+        </div>
     </div>
-    
+
 </body>
+
 </html>
