--- a/csstrial/Homework1.html
+++ b/csstrial/Homework1.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>tooltip, </title>
     <link rel="stylesheet" href="/htmlcss/CSS/Homework1.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -34,6 +35,17 @@
         <a href="#">10</a>
         <a href="#">&raquo;</a>
     </div>
+
+    <!-- Navigation bar -->
+
+    <h2>Navigation bar trial</h2>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#new">New</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+    </div>
+
 
 
     
