--- a/csstrial/Homework1.html
+++ b/csstrial/Homework1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,47 +9,70 @@
     <link rel="stylesheet" href="/htmlcss/CSS/Homework1.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <div class="tooltip">
         tooltip
-    <Span class="tooltiptext">
-        A tooltip is often used to specify extra information about something when the user moves the mouse pointer over an element    
-    </Span>
+        <Span class="tooltiptext">
+            A tooltip is often used to specify extra information about something when the user moves the mouse pointer
+            over an element
+        </Span>
     </div>
 
 
     <!-- Pagination -->
-    <br><br><br>
-    <h2> Pagination Sample</h2>
-    <div class="pagination">
-        <a href="#">&laquo;</a>
-        <a href="#">1</a>
-        <a href="#">2</a>
-        <a href="#">3</a>
-        <a href="#">4</a>
-        <a href="#">5</a>
-        <a href="#">6</a>
-        <a href="#">7</a>
-        <a href="#">8</a>
-        <a href="#">9</a>
-        <a href="#">10</a>
-        <a href="#">&raquo;</a>
-    </div>
+    <!-- <br><br><br>
+    <div style="text-align: center;">
+        <h2> Pagination Sample</h2>
+        <div class="pagination">
+            <a href="#">&laquo;</a>
+            <a href="#">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">6</a>
+            <a href="#">7</a>
+            <a href="#">8</a>
+            <a href="#">9</a>
+            <a href="#">10</a>
+            <a href="#">&raquo;</a>
+        </div>
+    </div> -->
 
     <!-- Navigation bar -->
 
-    <h2>Navigation bar trial</h2>
+
+    <!-- <h2>Navigation bar trial</h2>
     <div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="#new">New</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
-    </div>
+    </div> -->
+
+
+    <!-- Navbar with dropdown -->
+
+    <div class="navbar">
+        <a href="#home">Home</a>
+        <a href="#news">News</a>
+        <div class="dropdown">
+          <button class="dropbtn">Dropdown
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+      </div>
 
 
 
-    
+
 
 
 
@@ -91,4 +115,5 @@
 
 
 </body>
+
 </html>
