add flex amazon

--- a/hwgridflex/grid.html
+++ b/hwgridflex/grid.html
@@ -8,22 +8,40 @@
 </head>
 <body>
 
-    
+    <ul>
+        <li><a href="#bbc">BBC</a> </li>
+        <li><a href="#icon">ICON</a> </li>
+        <li><a href="#news">News</a> </li>
+        <li><a href="#sport">Sport</a> </li>
+        <li><a href="#reel">Reel</a> </li>
+        <li><a href="#more">More</a> </li>
+        <li><input type="text"> </li>
+    </ul>
+
+    <div class="topcontainer">
+        <div class="topitem1"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="divtop1"> divtop1 </div>
+        <div class="topitem2"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="divtop2"> divtop2 </div>
+        <div class="topitem3"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="divtop3"> divtop3 </div>
+        <div class="topitem4"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="divtop4"> divtop4 </div>
+        <div class="topitem5"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="divtop5"> divtop5 </div>
+    </div>
+
+
+
 
     <div class="container">
-        <div class="item1">div1</div>
-        <div class="item2">div2</div>
-        <div class="item3">div3</div>
-        <div class="item4">div4</div>
-        <div class="item5">div5</div>
-        <div class="item6">div6</div>
-        <div class="item7">div7</div>
-        <div class="item8">div8</div>
-        <div class="item9">div9</div>
-        <div class="item10">div10</div>
-        <div class="item11">div11</div>
-        <div class="item12">div12</div>
-        <div class="item13">div13</div>
+        <div class="item1"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 1"> div1 </div>
+        <div class="item2"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 2"> div2 </div>
+        <div class="item3"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 3"> div3 </div>
+        <div class="item4"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 4"> div4 </div>
+        <div class="item5"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 5"> div5 </div>
+        <div class="item6"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 6"> div6 </div>
+        <div class="item7"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 7"> div7 </div>
+        <div class="item8"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 8"> div8 </div>
+        <div class="item9"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 9"> div9 </div>
+        <div class="item10"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 10"> div10 </div>
+        <div class="item11"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 11"> div11 </div>
+        <div class="item12"> <img src="https://www.bbc.co.uk/news/special/2015/newsspec_10857/bbc_news_logo.png?cb=1" alt="div 12"> div12 </div>
     </div>
     
 </body>
