--- a/HWweek1/h3.html
+++ b/HWweek1/h3.html
@@ -17,19 +17,19 @@
         <tbody>
             <tr>
                 <td>TA Tle</td>
-                <td>0834284942</td>
+                <td><a href="tel:0834284942">0834284942</a></td>
             </tr>
             <tr>
                 <td>KFC</td>
-                <td>1150</td>
+                <td><a href="tel:1150">1150</a></td>
             </tr>
             <tr>
                 <td>Pizza Company</td>
-                <td>1112</td>
+                <td><a href="tel:1112">1112</a></td>
             </tr>
             <tr>
                 <td>Yayoi</td>
-                <td>1642</td>
+                <td><a href="tel:1642">1642</a></td>
             </tr>
         </tbody>
 
